[package]
name = "tetsimu2_hub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.4"
substring = "1.4.5"

[dev-dependencies]
parameterized = "0.3.1"