[package]
name = "tetsimu2_hub"
version = "1.0.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
enumset = "1.0.4"
env_logger = "0.9.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.4"
scraper = "0.12.0"
serde = { version = "1.0.126", features = ["derive"] }
serde-big-array = "0.3.2"
serde_json = "1.0.64"
substring = "1.4.5"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
ws = "0.9.1"
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear/"}
libtetris = { git = "https://github.com/MinusKelvin/cold-clear/" }

[dev-dependencies]
parameterized = "0.3.1"
